fix style service section tabletmode responsiveness

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -187,6 +187,12 @@ main{
 
    .service{
     margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex: 1 0 auto;
+    margin: 3px;
    }
 
    .service img {
@@ -575,7 +581,7 @@ main{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .service{
